# Sampler

./: CMakeLists.txt  README.md  Raport rozwoju aplikacji systemowej Sampler.docx  audiopanning.pro  audiowidget.cpp  audiowidget.h  main.cpp  pc++.cpp  soundvisualizationwidget.cpp  soundvisualizationwidget.h  sox_signalinfo_t.h
LOB/: LOB.jucer
LOB/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
LOB/Builds/MacOSX/LOB.xcodeproj/: project.pbxproj
LOB/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
LOB/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Sampler/: Sampler.jucer
Sampler/Builds/MacOSX/: CubeVisualizer.cpp  CubeVisualizer.h  Info-AU.plist
Sampler/Builds/MacOSX/Sampler.xcodeproj/: project.pbxproj
Sampler/Builds/MacOSX/Sampler.xcodeproj/project.xcworkspace/xcuserdata/spikespiegel.xcuserdatad/: UserInterfaceState.xcuserstate
Sampler/Builds/MacOSX/Sampler.xcodeproj/xcuserdata/spikespiegel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Sampler/Builds/MacOSX/Sampler.xcodeproj/xcuserdata/spikespiegel.xcuserdatad/xcschemes/: xcschememanagement.plist
Sampler/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Sampler/Source/: CubeVisualizer.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
